--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -457,22 +457,18 @@ workflows:
       - test-frontend:
           requires:
             - build-frontend
-          context: slack_secrets
       - test-backend:
-          context: slack_secrets
           requires:
             - build-backend
       - scan-backend:
           requires: [build-backend]
-          context: slack_secrets
       - scan-frontend:
           requires: [build-frontend]
-          context: slack_secrets
-      # - deploy-infrastructure:
-      #     requires: [test-frontend, test-backend, scan-frontend, scan-backend]
-      #     filters:
-      #       branches:
-      #         only: [main]
+      - deploy-infrastructure:
+          requires: [test-frontend, test-backend, scan-frontend, scan-backend]
+          filters:
+            branches:
+              only: [master]
       # - configure-infrastructure:
       #     requires: [deploy-infrastructure]
       # - run-migrations:
