--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -376,9 +376,9 @@ jobs:
       - run: #Workspace attachment needs tar and gzip which is not in awsimage 
           name: Install tar and gzip.
           command: |
-            yum install -y tar gzip 
-            curl -sL https://rpm.nodesource.com/setup_lts.x | bash -
-            yum -y install nodejs
+            yum install -y tar gzip curl
+            curl -sL https://rpm.nodesource.com/setup_14.x | bash -
+            yum install -y nodejs   
       - run:
           name: Update cloudfront distribution
           command: |
